WeatherApplication/WeatherApplication/src/text.txt
/home/arkadiy/AuroraOS/mersdk/targets/AuroraOS-4.0.2.303-base-i486.default/opt/cross/include/c++/8.3.0/ext/new_allocator.h:136: error: no matching function for call to ‘AuthenticateUserUseCase::AuthenticateUserUseCase(std::shared_ptr<IUserRepository>&)’
In file included from /home/arkadiy/AuroraOS/mersdk/targets/AuroraOS-4.0.2.303-base-i486.default/opt/cross/include/c++/8.3.0/i486-meego-linux-gnu/bits/c++allocator.h:33,
                 from /home/arkadiy/AuroraOS/mersdk/targets/AuroraOS-4.0.2.303-base-i486.default/opt/cross/include/c++/8.3.0/bits/allocator.h:46,
                 from /home/arkadiy/AuroraOS/mersdk/targets/AuroraOS-4.0.2.303-base-i486.default/opt/cross/include/c++/8.3.0/memory:63,
                 from ../WeatherApplication/src/Infrastructure/DependencyContainer.h:4,
                 from ../WeatherApplication/src/Infrastructure/DependencyContainer.cpp:1:
/home/arkadiy/AuroraOS/mersdk/targets/AuroraOS-4.0.2.303-base-i486.default/opt/cross/include/c++/8.3.0/ext/new_allocator.h: In instantiation of ‘void __gnu_cxx::new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = AuthenticateUserUseCase; _Args = {std::shared_ptr<IUserRepository>&}; _Tp = AuthenticateUserUseCase]’:
/home/arkadiy/AuroraOS/mersdk/targets/AuroraOS-4.0.2.303-base-i486.default/opt/cross/include/c++/8.3.0/bits/alloc_traits.h:475:4:   required from ‘static void std::allocator_traits<std::allocator<_Tp1> >::construct(std::allocator_traits<std::allocator<_Tp1> >::allocator_type&, _Up*, _Args&& ...) [with _Up = AuthenticateUserUseCase; _Args = {std::shared_ptr<IUserRepository>&}; _Tp = AuthenticateUserUseCase; std::allocator_traits<std::allocator<_Tp1> >::allocator_type = std::allocator<AuthenticateUserUseCase>]’
/home/arkadiy/AuroraOS/mersdk/targets/AuroraOS-4.0.2.303-base-i486.default/opt/cross/include/c++/8.3.0/bits/shared_ptr_base.h:545:39:   required from ‘std::_Sp_counted_ptr_inplace<_Tp, _Alloc, _Lp>::_Sp_counted_ptr_inplace(_Alloc, _Args&& ...) [with _Args = {std::shared_ptr<IUserRepository>&}; _Tp = AuthenticateUserUseCase; _Alloc = std::allocator<AuthenticateUserUseCase>; __gnu_cxx::_Lock_policy _Lp = (__gnu_cxx::_Lock_policy)2]’
/home/arkadiy/AuroraOS/mersdk/targets/AuroraOS-4.0.2.303-base-i486.default/opt/cross/include/c++/8.3.0/bits/shared_ptr_base.h:677:16:   required from ‘std::__shared_count<_Lp>::__shared_count(_Tp*&, std::_Sp_alloc_shared_tag<_Alloc>, _Args&& ...) [with _Tp = AuthenticateUserUseCase; _Alloc = std::allocator<AuthenticateUserUseCase>; _Args = {std::shared_ptr<IUserRepository>&}; __gnu_cxx::_Lock_policy _Lp = (__gnu_cxx::_Lock_policy)2]’
/home/arkadiy/AuroraOS/mersdk/targets/AuroraOS-4.0.2.303-base-i486.default/opt/cross/include/c++/8.3.0/bits/shared_ptr_base.h:1342:71:   required from ‘std::__shared_ptr<_Tp, _Lp>::__shared_ptr(std::_Sp_alloc_shared_tag<_Tp>, _Args&& ...) [with _Alloc = std::allocator<AuthenticateUserUseCase>; _Args = {std::shared_ptr<IUserRepository>&}; _Tp = AuthenticateUserUseCase; __gnu_cxx::_Lock_policy _Lp = (__gnu_cxx::_Lock_policy)2]’
/home/arkadiy/AuroraOS/mersdk/targets/AuroraOS-4.0.2.303-base-i486.default/opt/cross/include/c++/8.3.0/bits/shared_ptr.h:359:59:   required from ‘std::shared_ptr<_Tp>::shared_ptr(std::_Sp_alloc_shared_tag<_Tp>, _Args&& ...) [with _Alloc = std::allocator<AuthenticateUserUseCase>; _Args = {std::shared_ptr<IUserRepository>&}; _Tp = AuthenticateUserUseCase]’
/home/arkadiy/AuroraOS/mersdk/targets/AuroraOS-4.0.2.303-base-i486.default/opt/cross/include/c++/8.3.0/bits/shared_ptr.h:705:14:   required from ‘std::shared_ptr<_Tp> std::allocate_shared(const _Alloc&, _Args&& ...) [with _Tp = AuthenticateUserUseCase; _Alloc = std::allocator<AuthenticateUserUseCase>; _Args = {std::shared_ptr<IUserRepository>&}]’
/home/arkadiy/AuroraOS/mersdk/targets/AuroraOS-4.0.2.303-base-i486.default/opt/cross/include/c++/8.3.0/bits/shared_ptr.h:721:39:   required from ‘std::shared_ptr<_Tp> std::make_shared(_Args&& ...) [with _Tp = AuthenticateUserUseCase; _Args = {std::shared_ptr<IUserRepository>&}]’
../WeatherApplication/src/Infrastructure/DependencyContainer.cpp:34:86:   required from here
/home/arkadiy/AuroraOS/mersdk/targets/AuroraOS-4.0.2.303-base-i486.default/opt/cross/include/c++/8.3.0/ext/new_allocator.h:136:4: error: no matching function for call to ‘AuthenticateUserUseCase::AuthenticateUserUseCase(std::shared_ptr<IUserRepository>&)’
  { ::new((void *)__p) _Up(std::forward<_Args>(__args)...); }
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
